# DTIO

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dependencies.sh  env.sh  example_dtio_config.yaml
HCL_Map_queue/: HCL_Map.cpp  HCL_queue.cpp
adapter/: CMakeLists.txt  interceptor.h  real_api.h
adapter/brahma-interceptor/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h  posix_io_client.cc  posix_io_client.h
adapter/filesystem/: CMakeLists.txt  filesystem.cc  filesystem.h  filesystem_io_client.h  filesystem_mdm.cc  filesystem_mdm.h  filesystem_mdm_singleton.cc
adapter/mapper/: abstract_mapper.h  balanced_mapper.cc  balanced_mapper.h  mapper_factory.h
adapter/posix/: CMakeLists.txt  posix_api.cc  posix_api.h  posix_fs_api.h  posix_io_client.h
adapter/py-bindings/: CMakeLists.txt  setup.py
adapter/py-bindings/DTIO_Python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
adapter/py-bindings/dtio/: __init__.py
adapter/stdio/: CMakeLists.txt  stdio_api.cc  stdio_api.h
adapter/vol/: CMakeLists.txt  H5VLDTIO.cc  H5VLDTIO.h  H5VLerror.h
adapter/vol/vol-old/: H5VLDTIO.cc
benchmark/: CMakeLists.txt
benchmark/src/: cm1_base.cpp  cm1_tabios.cpp  complex_write_posix.cpp  hacc_base.cpp  hacc_tabios.cpp  kmeans_base.cpp  kmeans_tabios.cpp  montage_base.cpp  montage_tabios.cpp  pseudorandom_write_posix.cpp  simple_read.cpp  simple_write.cpp  simple_write_posix.cpp  stress_test.cpp  util.h
conf/: config_dtio_env.sh  default.yaml  example.yaml  hcl_servers
docs/: debugging.md  map-layouts.txt
dtio_chimods/: CMakeLists.txt  chimaera_repo.yaml
dtio_chimods/dt_read/: CMakeLists.txt
dtio_chimods/dt_read/include/dt_read/: dt_read_client.h  dt_read_lib_exec.h  dt_read_methods.h  dt_read_methods.yaml  dt_read_tasks.h
dtio_chimods/dt_read/src/: CMakeLists.txt  dt_read_client.cc  dt_read_monitor.py  dt_read_runtime.cc
dtio_chimods/dt_write/: CMakeLists.txt
dtio_chimods/dt_write/include/dt_write/: dt_write_client.h  dt_write_lib_exec.h  dt_write_methods.compiled.yaml  dt_write_methods.h  dt_write_methods.yaml  dt_write_tasks.h
dtio_chimods/dt_write/src/: CMakeLists.txt  dt_write_client.cc  dt_write_monitor.py  dt_write_runtime.cc
dtio_chimods/dt_write/test/: test.cc
dtio_chimods/dtio/: CMakeLists.txt
dtio_chimods/dtio/include/dtio/: dtio_client.h  dtio_lib_exec.h  dtio_methods.compiled.yaml  dtio_methods.h  dtio_methods.yaml  dtio_tasks.h
dtio_chimods/dtio/src/: CMakeLists.txt  dtio_client.cc  dtio_monitor.py  dtio_runtime.cc
dtio_chimods/dtio/test/: test.cc
dtio_chimods/dtiomod/: CMakeLists.txt
dtio_chimods/dtiomod/include/dtiomod/: dtiomod_client.h  dtiomod_lib_exec.h  dtiomod_methods.compiled.yaml  dtiomod_methods.h  dtiomod_methods.yaml  dtiomod_tasks.h  enumerations.h
dtio_chimods/dtiomod/src/: CMakeLists.txt  dtiomod_client.cc  dtiomod_monitor.py  dtiomod_runtime.cc
dtio_chimods/dtiomod/test/: test.cc
dtio_chimods/jarvis_example/jarvis_example/dt_write/: pkg.py
dtio_chimods/jarvis_example/jarvis_example/dtio/: pkg.py
dtio_chimods/jarvis_example/jarvis_example/dtio_adapter/: pkg.py
dtio_chimods/jarvis_example/jarvis_example/dtio_simple_test/: pkg.py
dtio_chimods/jarvis_example/jarvis_example/dtiomod/: pkg.py
dtio_chimods/jarvis_example/pipelines/: simple_test_dtio.yaml  test.yaml
hermes_shm/: CMakeLists.txt
include/: dtio.h  hermes_types.h  labios.h
include/dtio/: client_metadata_manager.h  config_manager.h  constants.h  data_structures.h  dtio_enumerations.h  dtio_system.h  enumerations.h  exceptions.h  logger.h  path_parser.h  return_codes.h  timer.h  utilities.h
include/dtio/client_interface/: distributed_hashmap.h  distributed_queue.h
include/dtio/common/: config_manager.h  constants.h  data_structures.h  enumerations.h  exceptions.h  logger.h  return_codes.h  singleton.h  threadPool.h  timer.h  utilities.h
include/dtio/data_manager/: data_manager.h
include/dtio/drivers/: dtio.h  hdf5.h  mpi.h  posix.h  stdio.h
include/dtio/external_clients/: iowarp_map_impl.h
include/dtio/metadata_manager/: metadata_manager.h
include/dtio/task_builder/: aggregating_builder.h  default_builder.h  task_builder.h
include/labios/: labios_system.h
include/labios/common/: config_manager.h  constants.h  data_structures.h  enumerations.h  exceptions.h  path_parser.h  return_codes.h  singleton.h  threadPool.h  timer.h  utilities.h
include/labios/drivers/: mpi.h  posix.h
scripts/: cleanup_shm.sh  dtiorun  launch_dtio.sh  launch_memcached.sh  launch_nats.sh  launch_with_dtio.sh  run_with_vol.sh
src/: client_metadata_manager.cc  config_manager.cc  config_manager.cpp  dtio_system.cpp  hermes_types.cc  labios_system.cpp  timer.cpp
src/client/: client.cpp  client.h  main.cpp
src/common/: config_manager.cpp  threadPool.cpp  timer.cpp
src/common/client_interface/: distributed_hashmap.cpp  distributed_queue.cpp
src/common/data_manager/: data_manager.cpp
src/common/external_clients/: hcl_map_impl.cpp  hcl_queue_impl.cpp  iowarp_map_impl.cpp  memcached_impl.cpp  nats_impl.cpp  rocksdb_impl.cpp  serialization_manager.cpp
src/common/metadata_manager/: metadata_manager.cpp
src/common/solver/: default_solver.cpp  dp_solver.cpp  knapsack.cpp  random_solver.cpp  round_robin_solver.cpp
src/common/task_builder/: aggregating_builder.cpp  default_builder.cpp  task_builder.cpp
src/data_manager/: data_manager.cpp
src/external_clients/: iowarp_map_impl.cpp
src/lib/: dtio.cpp  hdf5.cpp  mpi.cpp  posix.cpp  stdio.cpp
src/metadata_manager/: metadata_manager.cpp
src/system_manager/: main.cpp  system_manager_service.cpp  system_manager_service.h
src/task_builder/: aggregating_builder.cpp  default_builder.cpp  task_builder.cpp
src/task_scheduler/: main.cpp  task_scheduler.cpp  task_scheduler.h
src/worker/: main.cpp  worker.cpp  worker.h
src/worker/api/: hdf5_client.cpp  hdf5_client.h  io_client.h  multi_client.cpp  multi_client.h  posix_client.cpp  posix_client.h  stdio_client.cpp  (+3 more)
src/worker_manager/: main.cpp  worker_manager_service.cpp  worker_manager_service.h
(+43 files in other folders)
