cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

function(add_bench target)
    add_executable(dtio_${target} src/${target}.cpp)
    target_link_libraries(dtio_${target} ${PROJECT_NAME})
    add_dependencies(dtio_${target} ${PROJECT_NAME})
    install(TARGETS dtio_${target} DESTINATION ${CMAKE_INSTALL_BINDIR})
endfunction()

add_bench(cm1_base)
add_bench(cm1_tabios)
add_bench(hacc_base)
add_bench(hacc_tabios)
add_bench(kmeans_base)
add_bench(kmeans_tabios)
add_bench(montage_base)
add_bench(montage_tabios)
add_bench(simple_write)
add_bench(simple_read)
add_bench(stress_test)
