# ------------------------------------------------------------------------------
# Build dt_read module
# ------------------------------------------------------------------------------
include_directories(include)
add_subdirectory(src)

# -----------------------------------------------------------------------------
# Install dt_read headers
# -----------------------------------------------------------------------------
install(DIRECTORY include DESTINATION ${CMAKE_INSTALL_PREFIX})
