# ------------------------------------------------------------------------------
# Build dt_write module
# ------------------------------------------------------------------------------
include_directories(include)
add_subdirectory(src)

# -----------------------------------------------------------------------------
# Install dt_write headers
# -----------------------------------------------------------------------------
install(DIRECTORY include DESTINATION ${CMAKE_INSTALL_PREFIX})
